fix cast image bottom gap

--- a/src/app/components/person/person.component.css
+++ b/src/app/components/person/person.component.css
@@ -1,5 +1,6 @@
 .cast__image img {
     border-radius: 5px;
+    display: block;
 }
 .cast__info {
     background-color: #ffffff;
